kind of figuredo out header css bug. Got correct color to show, but it basically made it lay right above the navtabs container with the wrong color still showing up. need to figure out how to nest the components

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,8 +1,5 @@
-.header-container {
-  background: #282c34;
-}
-
 .header {
+  background: #282c34;
   width: 100%;
   height: 200px;
   display: flex;
