--- a/src/styles/NavTabs.css
+++ b/src/styles/NavTabs.css
@@ -4,7 +4,7 @@
 }
 
 .nav-tabs .toggleButton button {
-  background: transparent;
+  
   border: none;
   padding: 0;
 }
